# MWERalign

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  compile.sh  mwerAlign-test.cc  pyproject.toml  setup.py
.github/workflows/: build.yml
src/: CMakeLists.txt  Evaluator.cc  SimpleText2.hh  mwerAlign.cc
test/: mwerAlign.cc
